--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,26 @@
+# Environment variables
 .env
-venv
-__pycache__
-*.__pyc__
-.vscode
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Data files (we'll be careful about what data we commit)
+*.log
+logs/
+
+# OS
+.DS_Store
+Thumbs.db
