--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+```bash
 OPENAI_API_KEY=your_openai_api_key_here
+GOOGLE_API_KEY=your_google_api_key_here
 OPENAI_MODEL=gpt-4
 CREW_AI_LOG_LEVEL=INFO
+```
